// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should match snapshot default 1`] = `
<body>
  <div>
    <svg>
      <use
        xlink:href="#icon_name"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon should match snapshot props 1`] = `
<body>
  <div>
    <svg
      style="--tadashi_svelte_icon_fill: green;--tadashi_svelte_icon_width: 30px"
    >
      <use
        xlink:href="#icon_name"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon should match snapshot props 2`] = `
<body>
  <div>
    <svg
      useBase="false"
      useTransition="true"
    >
      <use
        xlink:href="#icon_name"
      />
    </svg>
  </div>
</body>
`;
